crates/atlas-runtime/tests/stdlib/functions/snapshots/stdlib__functions__part5__prelude_global_shadowing_all.snap
---
source: crates/atlas-runtime/tests/stdlib/functions/part5.rs
expression: diagnostics
---
- diag_version: 1
  level: error
  code: AT1012
  message: "Cannot shadow prelude builtin 'print' in global scope"
  file: "<input>"
  line: 1
  column: 62
  length: 5
  snippet: ""
  label: shadows prelude builtin
  help: Prelude builtins cannot be redefined at the top level. Use a different name or shadow in a nested scope.
- diag_version: 1
  level: error
  code: AT1012
  message: "Cannot shadow prelude builtin 'len' in global scope"
  file: "<input>"
  line: 1
  column: 85
  length: 3
  snippet: ""
  label: shadows prelude builtin
  help: Prelude builtins cannot be redefined at the top level. Use a different name or shadow in a nested scope.
- diag_version: 1
  level: error
  code: AT1012
  message: "Cannot shadow prelude builtin 'str' in global scope"
  file: "<input>"
  line: 1
  column: 103
  length: 3
  snippet: ""
  label: shadows prelude builtin
  help: Prelude builtins cannot be redefined at the top level. Use a different name or shadow in a nested scope.
