crates/atlas-runtime/tests/stdlib/functions/snapshots/stdlib__functions__part5__prelude_global_shadowing_function.snap
---
source: crates/atlas-runtime/tests/stdlib/functions/part5.rs
expression: diagnostics
---
- diag_version: 1
  level: error
  code: AT1012
  message: "Cannot shadow prelude builtin 'print' in global scope"
  file: "../../tests/prelude/global_shadowing_function.atl"
  line: 2
  column: 4
  length: 5
  snippet: "fn print() : void {}"
  label: shadows prelude builtin
  help: Prelude builtins cannot be redefined at the top level. Use a different name or shadow in a nested scope.
